fix scheduler header disalignment with the body

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,9 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 .header1-text {
     font-size: 25px;
     color: #90CDF9;
